--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,46 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".main2"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:padding="5dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ree">
+    android:background="@drawable/veh">
+
+    <LinearLayout
+        android:layout_marginRight="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:padding="2dp"
+            android:orientation="horizontal"
+            android:background="@drawable/papa">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:textSize="20dp"
+                android:layout_margin="25dp"
+                android:layout_weight="50"
+                android:textColor="#ffffff"
+                android:text="Manufacturer"
+                android:typeface="serif"/>
+
+            <Spinner
+                android:id="@+id/spinnerCountry"
+                android:layout_width="0dp"
+                android:scrollbarSize="20dp"
+                android:layout_marginTop="25dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="60" />
+        </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:layout_marginTop="90dp"
-        android:orientation="horizontal">
-
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:orientation="horizontal"
+        android:background="@drawable/papa">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="40"
-            android:textColor="#ffffff"
-            android:text="Manufacturer"/>
-
-        <Spinner
-            android:id="@+id/spinnerCountry"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="60" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_marginTop="70dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="40"
+            android:layout_margin="25dp"
+            android:textSize="20dp"
+            android:typeface="serif"
             android:text="Model"
             android:textColor="#ffffff"/>
 
@@ -48,32 +66,26 @@
             android:id="@+id/spinnerDivision"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
             android:layout_weight="60"
             />
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:layout_marginTop="60dp"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#ffffff"
-            android:text="SELECT FUEL TYPE"
-            android:id="@+id/te"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="88dp"
-        android:layout_marginTop="-10dp">
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:orientation="horizontal"
+        android:background="@drawable/papa">
         <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_margin="10dp">
 
             <RadioButton
                 android:layout_width="wrap_content"
@@ -81,6 +93,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
                 android:text="Petrol"
+                android:typeface="serif"
                 android:textColor="#ffffff" />
 
             <RadioButton
@@ -89,6 +102,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="15dp"
                 android:text="CNG"
+                android:typeface="serif"
                 android:textColor="#ffffff" />
 
             <RadioButton
@@ -97,40 +111,57 @@
                 android:layout_marginLeft="35dp"
                 android:layout_marginTop="15dp"
                 android:text="Diesel"
+                android:typeface="serif"
                 android:textColor="#ffffff" />
         </RadioGroup>
 
     </LinearLayout>
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:padding="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:orientation="vertical"
+        android:background="@drawable/papa">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="VEHCLE NO"
+            android:typeface="serif"
             android:layout_marginLeft="15dp"
             android:textColor="#ffffff"/>
+        <EditText
+            android:layout_marginTop="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:paddingLeft="10dp"
+            android:hint="MH-0A-XXXX"
+            android:background="@drawable/qwewwe"
+            android:layout_marginLeft="15dp"
+            android:ems="10"/>
+    </LinearLayout>
+
+
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="35dp"
+            android:ems="9"
+            android:paddingBottom="10dp"
+            android:background="@drawable/rer"
+            android:text="Add Vehicle"
+            android:id="@+id/Butto1"
+            />
+
 
     </LinearLayout>
-    <EditText
-        android:layout_marginTop="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:paddingLeft="10dp"
-        android:hint="MH-0A-XXXX"
-        android:background="@drawable/qwewwe"
-        android:layout_marginLeft="15dp"
-        android:ems="10"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="35dp"
-        android:ems="9"
-        android:background="@drawable/rer"
-        android:text="Add Vehicle"
-        android:id="@+id/Butto1"
-        />
-</LinearLayout>
+
+
+
+</ScrollView>
