--- a/app/src/main/res/layout/activity_verify_phone.xml
+++ b/app/src/main/res/layout/activity_verify_phone.xml
@@ -1,71 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VerifyPhoneActivity">
+    tools:context=".VerifyPhoneActivity"
+    android:background="@drawable/verification">
 
 
 
-    <ImageView
-        android:id="@+id/imageView"
+    <LinearLayout
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/verification"/>
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"
-        android:background="@drawable/rectangle"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="20dp"
-        android:text="Wait for the code I sent you..."
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:textColor="@color/colorPrimaryDark" />
+        android:padding="10dp"
+        android:layout_marginTop="330dp"
+        android:background="@drawable/papa"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/rectangle"
+            android:layout_marginLeft="40dp"
+            android:paddingLeft="30dp"
+            android:paddingTop="10dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="20dp"
+            android:text="Wait for the code I sent you..."
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textColor="@color/colorPrimaryDark" />
+        <EditText
+            android:id="@+id/editTextCode"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="80dp"
+            android:digits="0123456789"
+            android:background="@drawable/rectangle"
+            android:paddingLeft="30dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="20dp"
+            android:hint="enter code"
+            android:maxLength="6" />
+        <Button
+            android:id="@+id/buttonSignIn"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/editTextCode"
+             android:layout_marginLeft="105dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/login"
+            android:text="Login"
+            android:paddingBottom="10dp"
+            android:textAllCaps="false"
+            android:textColor="#ffffff" />
+
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_below="@id/buttonSignIn"
+            android:layout_marginLeft="125dp"
+            android:visibility="gone" />
+
+    </LinearLayout>
+
+
+    </LinearLayout>
 
 
 
-    <EditText
-        android:id="@+id/editTextCode"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textView"
-        android:layout_marginTop="25dp"
-        android:layout_centerHorizontal="true"
-        android:digits="0123456789"
-        android:background="@drawable/rectangle"
-        android:paddingLeft="40dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="30dp"
-        android:hint="enter code"
-        android:maxLength="6" />
-
-
-    <Button
-        android:id="@+id/buttonSignIn"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextCode"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/login"
-        android:text="Login"
-        android:paddingBottom="10dp"
-        android:textAllCaps="false"
-        android:textColor="#ffffff" />
-
-    <ProgressBar
-        android:id="@+id/progressbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonSignIn"
-        android:layout_centerHorizontal="true"
-        android:visibility="gone" />
-
-</RelativeLayout>
+</ScrollView>
