--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
+    <color name="Blue">#00b0ff</color>
 
     <color name="white">#ffffff</color>
     <color name="whitetransparent">#80ffffff</color>
