--- a/app/src/main/res/layout/activity_air_conditioner_repair.xml
+++ b/app/src/main/res/layout/activity_air_conditioner_repair.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Air_conditioner_repair"
-    android:background="#1A1927"
+    android:background="@drawable/back2"
     >
 
 
@@ -18,8 +18,8 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:background="@drawable/wet"
+            android:layout_height="140dp"
+            android:background="@drawable/front"
             />
         <LinearLayout
             android:layout_width="match_parent"
