--- a/app/src/main/res/layout/activity_auto_electric_service.xml
+++ b/app/src/main/res/layout/activity_auto_electric_service.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Auto_electric_service"
-    android:background="#1A1927"
+    android:background="@drawable/back2"
     >
 
 
@@ -18,9 +18,11 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:background="@drawable/wet"
+            android:layout_height="140dp"
+            android:background="@drawable/front"
             />
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
