--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/verification"/>
+        android:background="@drawable/newwheal"/>
 
 
 
@@ -23,29 +23,30 @@
 
         <Spinner
             android:id="@+id/spinnerCountries"
-            android:layout_width="120dp"
+            android:layout_width="100dp"
             android:paddingTop="10dp"
+            android:layout_marginLeft="20dp"
             android:paddingBottom="10dp"
             android:background="@drawable/roundrectangle"
-            android:layout_height="wrap_content"></Spinner>
+            android:layout_height="60dp"></Spinner>
 
         <EditText
             android:id="@+id/editTextPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:background="@drawable/rectangle"
             android:digits="0123456789"
             android:hint="Enter your number"
             android:maxLength="10"
             android:paddingTop="20dp"
             android:paddingBottom="30dp"
-            android:paddingLeft="20dp" />
+            android:paddingLeft="10dp" />
     </LinearLayout>
 
     <Button
         android:id="@+id/buttonContinue"
-        android:background="@drawable/group"
+        android:background="@drawable/gp1"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/linearLayout"
@@ -53,14 +54,7 @@
         android:layout_centerHorizontal="true"
         android:textAllCaps="false"></Button>
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonContinue"
-        android:layout_marginTop="40dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/path1"/>
+
 
 
 </RelativeLayout>
