--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UserProfile"
-    android:background="#1A1927">
+    android:background="@drawable/back2">
 
     <LinearLayout
         android:layout_marginRight="2dp"
@@ -16,21 +16,24 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:background="@drawable/wet"/>
+            android:layout_height="140dp"
+            android:background="@drawable/front"
+            />
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical">
         <ImageView
 
             android:id="@+id/userimage"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="0dp"
             android:layout_gravity="center"
             android:src="@drawable/userphoto"
             />
