--- a/app/src/main/res/layout/activity_verify_phone.xml
+++ b/app/src/main/res/layout/activity_verify_phone.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".VerifyPhoneActivity"
-    android:background="@drawable/verification">
+    android:background="@drawable/newwheal">
 
 
 
@@ -21,8 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:layout_marginTop="330dp"
-        android:background="@drawable/papa"
+        android:layout_marginTop="250dp"
         android:orientation="vertical">
         <TextView
             android:id="@+id/textView"
@@ -30,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:background="@drawable/rectangle"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="30dp"
             android:paddingLeft="30dp"
             android:paddingTop="10dp"
             android:paddingRight="20dp"
@@ -44,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/textView"
             android:layout_marginTop="15dp"
-            android:layout_marginLeft="80dp"
+            android:layout_marginLeft="90dp"
             android:digits="0123456789"
             android:background="@drawable/rectangle"
             android:paddingLeft="30dp"
