--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,14 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AccountFragment">
+    tools:context=".AccountFragment"
+    android:background="@drawable/back2">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Account" />
 
-</FrameLayout>
+    <LinearLayout
+        android:layout_marginRight="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:background="@drawable/front"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/profile"
+                android:layout_width="0dp"
+                android:paddingTop="20dp"
+                android:layout_height="70dp"
+                android:layout_weight="40"
+                android:textSize="21dp"
+                android:paddingLeft="5dp"
+                android:text="Profile"
+                android:background="@drawable/reg_edittext_style"
+                android:typeface="serif"
+                android:textColor="#000000"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginTop="30dp"
+
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/my_vehicle"
+                android:layout_width="0dp"
+                android:paddingTop="20dp"
+                android:layout_height="70dp"
+                android:layout_weight="40"
+                android:textSize="21dp"
+                android:paddingLeft="5dp"
+                android:text="My Vehicle"
+                android:background="@drawable/reg_edittext_style"
+                android:typeface="serif"
+                android:textColor="#000000"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginTop="30dp"
+
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/about_us"
+                android:layout_width="0dp"
+                android:paddingTop="20dp"
+                android:layout_height="70dp"
+                android:layout_weight="40"
+                android:textSize="21dp"
+                android:paddingLeft="5dp"
+                android:text="About Us"
+                android:background="@drawable/reg_edittext_style"
+                android:typeface="serif"
+                android:textColor="#000000"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/logout"
+                android:layout_width="0dp"
+                android:paddingTop="20dp"
+                android:layout_height="70dp"
+                android:layout_weight="40"
+                android:textSize="21dp"
+                android:paddingLeft="5dp"
+                android:text="Logout"
+                android:background="@drawable/reg_edittext_style"
+                android:typeface="serif"
+                android:textColor="#000000"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+
+
+</ScrollView>
